# ed25519-dalek-xkeypair

./: CHANGELOG.md  Cargo.toml  README.md
src/: errors.rs  key.rs  lib.rs  types.rs
