[package]
name = "ed25519-dalek-xkeypair"
version = "0.1.0"
authors = ["just-do-halee <just.do.halee@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/just-do-halee/ed25519-dalek-xkeypair"
documentation = "https://docs.rs/ed25519-dalek-xkeypair/"
repository = "https://github.com/just-do-halee/ed25519-dalek-xkeypair"
description = "BIP32 implementation for ed25519-dalek key pairs."
keywords = ["derivation", "BIP32", "ed25519", "keypair", "blockchain"]
categories = ["cryptography", "no-std"]

[features]
default = []
std = ["derivation-path/std", "sha2/std", "ed25519-dalek/std"]

[dependencies]
ed25519-dalek = { version = "1.0.1", default-features = false, features = ["u64_backend", "rand"] }
derivation-path = { version = "0.1.3", default-features = false }
bs58 = { version = "0.4.0", default-features = false, features = ["check"] }
ripemd160 = { version = "0.9.1", default-features = false }
sha2 = { version = "0.9.6", default-features = false }
hmac = { version = "0.11.0", default-features = false }

utils-results = { version = "5.1.1", default-features = true }
zeroize = { version = "1.4.1", default-features = true }

[dev-dependencies]
hex = "0.4.3"
