[package]
name = "ed25519-dalek-xkeypair"
version = "1.0.2"
authors = ["just-do-halee <just.do.halee@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/just-do-halee/ed25519-dalek-xkeypair"
documentation = "https://docs.rs/ed25519-dalek-xkeypair/"
repository = "https://github.com/just-do-halee/ed25519-dalek-xkeypair"
description = "BIP32 implementation for ed25519-dalek key pairs."
keywords = ["derivation", "BIP32", "ed25519", "keypair", "blockchain"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = [
    "ed25519-dalek/std",
    "derivation-path/default",
    "bs58/std",
    "ripemd160/default",
    "sha2/default",
    "hmac/std",
    "utils-results/default",
    "zeroize/default",
    "hex/std"
    ]

[dependencies]
ed25519-dalek = { version = "1.0.1", default-features = false, features = ["u64_backend", "rand"] }
derivation-path = { version = "0.1.3", default-features = false }
bs58 = { version = "0.4.0", default-features = false, features = ["check", "alloc"] }
ripemd160 = { version = "0.9.1", default-features = false }
sha2 = { version = "0.9.6", default-features = false }
hmac = { version = "0.11.0", default-features = false }

utils-results = { version = "5.2.1", default-features = false }
zeroize = { version = "1.4.1", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }


[package.metadata.docs.rs]
no-deps = true